--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,8 +5,12 @@ spring:
         password: nnpia
     jpa:
         hibernate:
-            ddl-auto: create
+            ddl-auto: create-drop
         properties:
           hibernate:
               show_sql: true
               format_sql: true
+server:
+    port: 9000
+    servlet:
+        context-path: /api
